--- a/style1.css
+++ b/style1.css
@@ -1,12 +1,87 @@
-.block{
+.gameBlock{
     margin: auto;
+    margin-top: 0;
     align-items: center;
-    height:100vw;
-    width: 100vw;
+}
+
+.toolsBlock{
+    margin: auto;
+
+    border: 0.5vw solid black;
+    border-right: 0.2vw solid black;
+    border-bottom: 0.2vw solid black;
+    border-radius: 1vw;
+
+    width: 97.5%;
+    height: 46vw;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+.menuItem{
+    border-bottom: 0.2vw dashed black;
+    padding: 1vw;
+    padding-left: 0.3vw;
+}
+
+
+.counter{
+    border: 0.2vw solid black; 
+    border-radius: 0.6vw;
+    padding: 0.2vw;
+    font-size: 3vw;
+}
+
+.played{
+    margin: 0.4vw;
+    font-size: 2.5vw;
+    color: #240596;
+    font-family:cursive;
+    font-weight:600;
+}
+.victories{
+    margin: 0.4vw;
+    font-size: 2.5vw;
+    color: #240596;
+    font-family:cursive;
+    font-weight:600;
+
+    display: grid;
+    grid-template-rows: max-content max-content max-content;
+    grid-gap: 0.4vw;
+}
+.restart{
+    margin: 0.4vw;
+    font-size: 2.5vw;
+    color: #240596;
+    font-family:cursive;
+    font-weight:600;
+}
+
+.restartButton{
+    background-color: transparent;
+    background-image: linear-gradient(#4C33F2, #3151E8);
+    border: 0.4vw solid black;
+    border-radius: 1vw;
+    height: 5vw;
+    font-size: 2vw;
+    font-family:cursive;
+}
+.restartButton:hover{
+    background-image: linear-gradient(#4d33f2b0, #314fe8ac);
+    border: 0.2vw solid black;
+    margin-left: 0.2vw;
+}
+.restartButton:active{
+    border-color: #240596;
+    color: #240596;
+    background-image: linear-gradient(#8339DB, #4C33F2);
 }
 
 .background{
     height: 100%;
+    margin: 0.5vw;
+
+    display: grid;
+    grid-template-columns: 20vw auto;
 
     background-color: transparent;
     background-image: linear-gradient(to right, 
@@ -24,12 +99,12 @@
     grid-template-rows: auto auto auto;
     grid-gap: 1.7%;
     
-    width: 45%;
-    height: 45%;
+    width: 21.714vw;
+    height: 21.714vw;
     margin: auto;
 
     background-color: white;
-    border: 3vw solid black;
+    border: 2vw solid black;
     border-radius: 2vw; 
 }
 
@@ -48,7 +123,7 @@
     height: 50%;
     margin: 21%;
 
-    border: 4px solid;
+    border: 0.35vw solid;
     border-radius: 50%;
     color: #99DBE9;
 
@@ -63,35 +138,39 @@
     100% {clip-path: polygon(5% 0%, 0% 5%, 45% 50%, 0% 95%, 5% 100%, 50% 55%, 95% 100%, 100% 95%, 55% 50%, 100% 5%, 95% 0%, 50% 45%);}
 }
 @keyframes circleDrawing{
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {}
+    100% {}
 }
 
 .cell{
-    width: 100%;
-    height: 100%;
+    width: 7vw;
+    height: 7vw;
     background-color: black;
     text-align: center;
 }
 
 .header{
     color: #240596;
-    font-size: 30px;
+    font-size: 3.5vw;
     font-family:cursive;
     text-align: center;
+
+    margin-top: 1vw;
+    margin-bottom: 1vw;
 }
 
 .victory-notice{
     margin: auto;
-    margin-top: 10px;
+    margin-top: 2vw;
 
-    width: 310px;
+    width: 21.714vw;
+    height: 7vw;
     
     background: black;
-    border: 15px solid black;
-    border-radius: 10px;
+    border: 2vw solid black;
+    border-radius: 2vw; 
 
-    font-size: 20px;
+    font-size: 2.5vw;
     font-family:cursive;
     text-align: center;
     color: antiquewhite;
